--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>ezChat test</title>
   </head>
   <body>
-    <h1>Hello theeere</h1>
-    <p>Text goes here</p>
-    <input type="text" />
-    <input type="text" />
+    <div class="chat-container">
+      <div class="chat-header">
+        <h1 class="chat-logo">ezChat</h1>
+        <button class="btn btn-leave">Leave Room</button>
+      </div>
+      <div class="chat-main">
+        <div class="chat-sidebar">
+          <div class="rooms">
+            <h2>Rooms</h2>
+            <ul>
+              <li class="room">TestRoom</li>
+            </ul>
+          </div>
+          <div class="users">
+            <h2>Users</h2>
+            <ul>
+              <li>Filip</li>
+              <li>Jocke</li>
+              <li>Johan</li>
+              <li>Anden</li>
+              <li>Anton</li>
+            </ul>
+          </div>
+        </div>
+        <div class="message-container">
+          <div class="message">Filip - Hej hallå, filip här</div>
+          <div class="message">Anton - Tjena filip!</div>
+          <div class="message">Jocke - Morsning korsning alla!</div>
+        </div>
+      </div>
+      <div class="chat-footer">
+        <input class="input input-name" type="text" />
+        <input class="input input-msg" type="text" />
+      </div>
+    </div>
   </body>
 </html>
