implemented room join client side

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
           <div class="rooms">
             <h2>Rooms</h2>
             <ul>
-              <li class="room">TestRoom</li>
+              <li class="room"><a id="room1" href="#">Wow Classic</a></li>
+              <li class="room"><a id="room2" href="#">Wow Retail</a></li>
             </ul>
           </div>
           <div class="users">
@@ -31,29 +32,7 @@
             </ul>
           </div>
         </div>
-        <div class="message-container">
-          <div class="message">
-            <p class="meta">
-              <span class="text-name">Filip</span>
-              <span class="time">9:12</span>
-            </p>
-            <p class="text">Hej hallå, filip här</p>
-          </div>
-          <div class="message">
-            <p class="meta">
-              <span class="text-name">Anton</span>
-              <span class="time">9:13</span>
-            </p>
-            <p class="text">Tjena filip!</p>
-          </div>
-          <div class="message">
-            <p class="meta">
-              <span class="text-name">Jocke</span>
-              <span class="time">9:15</span>
-            </p>
-            <p class="text">Morsning korsning alla!</p>
-          </div>
-        </div>
+        <div class="message-container"></div>
       </div>
       <div class="chat-footer">
         <input
