--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="chat-container">
       <div class="chat-header">
         <h1 class="chat-logo">ezChat</h1>
-        <button class="btn btn-leave">Leave Room</button>
+        <button id="btnLeaveRoom" class="btn btn-leave">Leave Room</button>
       </div>
       <div class="chat-main">
         <div class="chat-sidebar">
