implemented user room listing

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div class="chat-container">
       <div class="chat-header">
         <h1 class="chat-logo">ezChat</h1>
+        <h2 id="room-name" class="room-name">Javascript</h2>
         <button id="btnLeaveRoom" class="btn btn-leave">Leave Room</button>
       </div>
       <div class="chat-main">
@@ -23,13 +24,7 @@
           </div>
           <div class="users">
             <h2>Users</h2>
-            <ul>
-              <li>Filip</li>
-              <li>Jocke</li>
-              <li>Johan</li>
-              <li>Anden</li>
-              <li>Anton</li>
-            </ul>
+            <ul id="userList"></ul>
           </div>
         </div>
         <div class="message-container"></div>
